generate text embeddings and calculate cosine distance

--- a/evaluate.ipynb
+++ b/evaluate.ipynb
@@ -27,7 +27,7 @@
     "FORMATTED_DATA_FILENAME = \"true_data.json\"  #the name of the file that contains the data to read in\n",
     "DETECTION_RESULTS_FILENAME = \"detection_results.json\"\n",
     "EVALUATION_RESULTS_FILENAME = \"evaluation.txt\"\n",
-    "DATASETS = [\"DMoP\", \"MSRP\", \"ETPC\"]     #the folders in the DATASETS_FOLDER should be named like the datasets here\n",
+    "DATASETS = [\"MPC\", \"MSRP\", \"ETPC\"]     #the folders in the DATASETS_FOLDER should be named like the datasets here\n",
     "OUT_DIR = \"output\"      #the directory to output the formatted json in\n",
     "\n",
     "FUZZY = \"fuzzy_based_result\"\n",
