--- a/parse.ipynb
+++ b/parse.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "DATASETS_FOLDER = \"datasets\"    #the folder that contains the dataset directories to read in\n",
-    "DATASETS = [\"DMoP\", \"MRPC\", \"ETPC\", \"SAv2\"]     #the folders in the DATASETS_FOLDER should be named like the datasets here\n",
+    "DATASETS = [\"MPC\", \"MRPC\", \"ETPC\", \"SAv2\"]     #the folders in the DATASETS_FOLDER should be named like the datasets here\n",
     "OUT_DIR = \"output\"      #the directory to output the formatted json in\n",
     "\n",
     "pd.set_option(\"display.max_colwidth\", None)\n",
