--- a/paraphrase_detection.ipynb
+++ b/paraphrase_detection.ipynb
@@ -31,7 +31,7 @@
    "source": [
     "DATASETS_FOLDER = \"datasets\"    #the folder that contains the dataset directories to read in\n",
     "FORMATTED_DATA_FILENAME = \"true_data.json\"  #the name of the file that contains the data to read in\n",
-    "DATASETS = [\"DMoP\", \"MSRP\", \"ETPC\"]     #the folders in the DATASETS_FOLDER should be named like the datasets here\n",
+    "DATASETS = [\"MPC\", \"MSRP\", \"ETPC\"]     #the folders in the DATASETS_FOLDER should be named like the datasets here\n",
     "OUT_DIR = \"output\"      #the directory to output the formatted json in\n",
     "\n",
     "FUZZY = \"fuzzy_based_result\"\n",
