paraphrase identification rework

--- a/paraphrase_detection.ipynb
+++ b/paraphrase_detection.ipynb
@@ -168,6 +168,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modify datasets to be balanced (paraohrase & non-paraphrase)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 126,
    "metadata": {},
    "outputs": [
